@@ -1,9 +1,10 @@
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
 
 public class Family {
-    private ArrayList<String> members = new ArrayList<>(Arrays.asList("Paul", "Aubree", "Harvest", "Ocean", "Everest"));
+    private List<String> members = List.of("Paul", "Aubree", "Harvest", "Ocean", "Everest");
 
     public ArrayList<String> getParents() {
         return members.stream()
@@ -11,4 +12,9 @@ public class Family {
             .collect(Collectors.toCollection(ArrayList::new));
     }
 
+    public List<String> getChildren() {
+        return members.stream()
+            .filter(member -> !member.equals("Paul") && !member.equals("Aubree"))
+            .toList();
+    }
 }
